--- a/maven-unit-test/build-run-test.yml
+++ b/maven-unit-test/build-run-test.yml
@@ -3,7 +3,7 @@ resources:
 - name: maven-examples
   type: git
   source:
-    branch: master
+    branch: main
     uri: https://github.com/Trezeguet-tech/MyGithubProject.git
 jobs:
 - name: compile-run-unittest
@@ -28,5 +28,6 @@ jobs:
        args:
        - -exec
        - |
+          git config --global --add safe.directory /tmp/build/get
           cd maven-examples/maven-unit-test/
           mvn clean install
