--- a/maven-unit-test/build-run-test.yml
+++ b/maven-unit-test/build-run-test.yml
@@ -9,6 +9,7 @@ jobs:
 - name: compile-run-unittest
   plan:
   - get: maven-examples
+    trigger: true
   - task: build
     config:
       platform: linux
